# RaptorSpectrum

./: .gitmodules  CMakeLists.txt
cmake/: raptorspectrum-config.cmake
example/: CMakeLists.txt  main.cpp
include/: raptorspectrum.h
src/: threads.h
src/client/: api.cpp  client_impl.cpp  client_impl.h  iclient.h  post_process.cpp  post_process.h
src/fft/: fft.cpp  fft.h  fft_dispatcher_base.cpp  fft_dispatcher_base.h  fft_dispatcher_realtime.cpp  fft_dispatcher_realtime.h  fft_dispatcher_threaded.cpp  fft_dispatcher_threaded.h
src/server/: api.cpp  iserver.h  server_impl.cpp  server_impl.h
